# ai-cost-observatory

./: .env.example  .gitignore  ALL_SYSTEMS_GO.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  DOCKER_FIX.md  FINAL_STATUS.md  GITHUB_SETUP.md  GITHUB_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  NEXT_STEPS.md  PROJECT_COMPLETE.md  PYPI_CI_CD_GUIDE.md  QUICK_COMMANDS.md  README.md  READY_TO_PUBLISH.md  RELEASE_AUTOMATION_COMPLETE.md  SCRIPTS_REFERENCE.md  SETUP_COMPLETE.md  TIMEOUT_FIX.md  create-github-repo.sh  create-release.sh  docker-compose.yml  docker-manage.sh  enhance-github-repo.sh  init.py  publish-to-pypi.sh  quickstart.sh  requirements.md  test_system.py
.github/workflows/: ci-cd.yml  docker-build.yml  release-publish.yml
docs/: CI_CD_SETUP.md  DOCKER_TROUBLESHOOTING.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  PYPI_PUBLISHING.md  RELEASE_PIPELINE.md
examples/: basic_openai.py  generate_sample_data.py  langchain_integration.py  manual_logging.py  multi_agent_rag.py
sdk/: MANIFEST.in  pyproject.toml  setup.py
sdk/ai_observer/: __init__.py  adapters.py  config.py  core.py
sdk/ai_observer/langchain/: __init__.py
server/: .dockerignore  Dockerfile  requirements.txt
server/api/: main.py
server/database/: __init__.py
server/models/: database.py  schemas.py
server/services/: analytics.py  forecasting.py  optimization.py
tests/: test_sdk.py
ui/: .dockerignore  Dockerfile  dashboard.py
