[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cost-observatory"
version = "1.0.0"
description = "Open-source AI observability layer for agentic systems - Track, analyze, and optimize LLM costs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ai", "llm", "observability", "cost-tracking", "openai", "anthropic", "langchain", "monitoring"]
authors = [
  {name = "Sabyasachi Ghosh", email = "ghoshsabyasachi0@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "requests>=2.31.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
]

[project.optional-dependencies]
langchain = [
  "langchain>=0.1.0",
  "langchain-openai>=0.0.2",
]
llamaindex = [
  "llama-index>=0.9.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Sabyasachig/ai-cost-observatory"
Documentation = "https://github.com/Sabyasachig/ai-cost-observatory#readme"
Repository = "https://github.com/Sabyasachig/ai-cost-observatory"
"Bug Tracker" = "https://github.com/Sabyasachig/ai-cost-observatory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_observer*"]
exclude = ["tests*"]
